<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.jh.sh.jhsdk.LoginActivity">

    <include layout="@layout/jh_include_title" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_launcher" />

            <AutoCompleteTextView
                android:id="@+id/id_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jh_hint_input_phone"
                android:inputType="textEmailAddress"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/id_verify_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/jh_hint_input_verify_code"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/jh_hint_input_verify_code"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jh_btn_get_verify_code" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/id_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jh_hint_input_pwd"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/jh_hint_input_pwd"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_launcher" />

            <EditText
                android:id="@+id/id_confirm_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jh_hint_confirm_pwd"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/jh_hint_confirm_pwd"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />
        </LinearLayout>

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/jh_btn_submit"
            android:textStyle="bold" />

    </LinearLayout>

    <include layout="@layout/jh_include_bottom" />
</LinearLayout>
